--- a/pom.xml
+++ b/pom.xml
@@ -69,9 +69,9 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.8.1</version>
 				<configuration>
-					<!--source>${java.version}</source-->
-					<!--target>${java.version}</target-->
-					<!--annotationProcessorPaths>
+					<source>${java.version}</source>
+					<target>${java.version}</target>
+					<annotationProcessorPaths>
 						<path>
 							<groupId>org.projectlombok</groupId>
 							<artifactId>lombok</artifactId>
@@ -82,19 +82,7 @@
 							<artifactId>mapstruct-processor</artifactId>
 							<version>${org.mapstruct.version}</version>
 						</path>
-					</annotationProcessorPaths-->
-					<excludes>
-
-
-					<exclude>
-
-					<groupId>org.projectlombok</groupId>
-
-					<artifactId>lombok</artifactId>
-
-					</exclude>
-
-					</excludes>
+					</annotationProcessorPaths>
 				</configuration>
 			</plugin>
 		</plugins>
